<resources>
    <string name="app_name">Calculator</string>
    <string name="button_0">0</string>
    <string name="button_minus">-</string>
    <string name="button_dot">.</string>
    <string name="button_equals">=</string>
    <string name="button_plus">+</string>
    <string name="button_multiply">*</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_6">6</string>
    <string name="button_5">5</string>
    <string name="button_4">4</string>
    <string name="button_divide">/</string>
    <string name="button_9">9</string>
    <string name="button_8">8</string>
    <string name="button_7">7</string>
    <string name="button_back">← Back</string>
    <string name="simple_calculator">Simple calculator</string>
    <string name="close_the_application">Close the application</string>
    <string name="scientific_calculator">Scientific calculator</string>
    <string name="info">Info</string>
    <string name="author">Author: Filip Lecrut</string>
    <string name="button_factorial">!</string>
    <string name="button_ca">AC</string>
    <string name="button_clear"><![CDATA[<-]]></string>
    <string name="button_power">^</string>
    <string name="button_plus_minus">+/-</string>
    <string name="button_c">C/CE</string>
    <string name="button_sin">Sin</string>
    <string name="button_cos">Cos</string>
    <string name="button_tan">Tan</string>
    <string name="button_sqrt">Sqrt</string>
    <string name="button_percent">%</string>
    <string name="button_toSquare">^2</string>
    <string name="button_log">log</string>
    <string name="button_ln">Ln</string>
</resources>