<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/button_back" />

    <TextView
        android:id="@+id/myText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_centerHorizontal="true"
        android:text="Twój tekst lub liczba"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myText"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:text="@string/button_7"
            android:id="@+id/button7" />
        <Button
            android:text="@string/button_8"
            android:id="@+id/button8" />
        <Button
            android:text="@string/button_9"
            android:id="@+id/button9" />
        <Button
            android:text="@string/button_divide"
            android:id="@+id/buttonDivide" />

        <Button
            android:text="@string/button_4"
            android:id="@+id/button4" />
        <Button
            android:text="@string/button_5"
            android:id="@+id/button5" />
        <Button
            android:text="@string/button_6"
            android:id="@+id/button6" />
        <Button
            android:text="@string/button_multiply"
            android:id="@+id/buttonMultiply" />

        <Button
            android:text="@string/button_1"
            android:id="@+id/button1" />
        <Button
            android:text="@string/button_2"
            android:id="@+id/button2" />
        <Button
            android:text="@string/button_3"
            android:id="@+id/button3" />
        <Button
            android:text="@string/button_minus"
            android:id="@+id/buttonMinus" />

        <Button
            android:text="@string/button_0"
            android:id="@+id/button0" />
        <Button
            android:text="@string/button_dot"
            android:id="@+id/buttonDot" />
        <Button
            android:text="@string/button_equals"
            android:id="@+id/buttonEquals" />
        <Button
            android:text="@string/button_plus"
            android:id="@+id/buttonPlus" />

    </GridLayout>


</RelativeLayout>
