<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--    <Button-->
<!--        android:id="@+id/backButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:backgroundTint="@color/red"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/button_back" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textResultField"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="right|center_vertical"
            android:paddingHorizontal="30dp"
            android:text="0"
            android:textColor="@color/orange"
            android:textSize="40dp"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_plus_minus"
            android:id="@+id/buttonPlusMinus" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_c"
            android:id="@+id/buttonC" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_clear"
            android:id="@+id/buttonClear" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_percent"
            android:id="@+id/buttonPercent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_ca"
            android:id="@+id/buttonCA" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_sin"
            android:id="@+id/buttonSin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_cos"
            android:id="@+id/buttonCos" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_tan"
            android:id="@+id/buttonTan" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_sqrt"
            android:id="@+id/buttonSqrt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_factorial"
            android:id="@+id/buttonFactorial" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:text="@string/button_7"
            android:id="@+id/button7" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/button_8"
            android:id="@+id/button8" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/button_9"
            android:id="@+id/button9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/button_toSquare"
            android:id="@+id/buttonToSquare" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_divide"
            android:id="@+id/buttonDivide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_4"
            android:id="@+id/button4" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_5"
            android:id="@+id/button5" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_6"
            android:id="@+id/button6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/button_power"
            android:id="@+id/buttonPower" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_multiply"
            android:id="@+id/buttonMultiply" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_1"
            android:id="@+id/button1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_2"
            android:id="@+id/button2" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_3"
            android:id="@+id/button3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/button_log"
            android:id="@+id/buttonLog" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_minus"
            android:id="@+id/buttonMinus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_dot"
            android:id="@+id/buttonDot" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_0"
            android:id="@+id/button0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_equals"
            android:id="@+id/buttonEquals" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/button_ln"
            android:id="@+id/buttonLn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/smokeGray"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMaxTextSize="40sp"
            android:layout_weight="1"
            android:text="@string/button_plus"
            android:id="@+id/buttonPlus" />

    </LinearLayout>


</LinearLayout>
